--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,20 @@
 <div class="container">
   <div class="ui card">
     <h1>Team Generator</h1>
-    <ul>
-      <li>Edwin</li>
-      <li>Arley</li>
-      <li>Lina</li>
+    <ul class="list">
+      <li *ngFor="let member of members">{{ member }}</li>
     </ul>
     <div class="add-members-container">
-      <input type="text" placeholder="Name">
-      <button>Add</button>
+      <input
+        #addMemberInput
+        type="text"
+        placeholder="Name"
+        (input)="onInput(addMemberInput.value)"
+      />
+      <button (click)="addMember()">Add</button>
     </div>
     <div class="input-container">
-      <input type="text" placeholder="# of teams">
+      <input type="text" placeholder="# of teams" />
       <button>Generate</button>
     </div>
   </div>
